feat: soporte drag & drop; chore: actualizar a net8.0-windows

--- a/RedimensionarIcono.WinForms/RedimensionarIcono.WinForms.csproj
+++ b/RedimensionarIcono.WinForms/RedimensionarIcono.WinForms.csproj
@@ -1,11 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+ <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
+    <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>RedimensionarIcono.WinForms</AssemblyName>
     <RootNamespace>RedimensionarIcono.WinForms</RootNamespace>
+    <ApplicationHighDpiMode>SystemAware</ApplicationHighDpiMode>
+    <ForceDesignerDpiUnaware>true</ForceDesignerDpiUnaware>
   </PropertyGroup>
-</Project>
+ </Project>
